# immoweb-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  body.md  environment.yaml  main.py  prefect.yaml  pyproject.toml  scrape_immoweb_flow-deployment.yaml  src.py
.devcontainer/: .devcontainer.json  Dockerfile
.github/workflows/: release.yaml
immoweb_scraper/: constants.py  download_chromedriver.py  main.py  models.py  parse.py  scrape.py  setup.py  sqlalchemy.py  tasks.py  url.py  utils.py
immoweb_scraper/batcher/: BatchStateHandler.py  PostalCodeBatcher.py  constants.py
immoweb_scraper/db/: DBConnection.py  addition.py  models.py
immoweb_scraper/scrape/: locators.py  parse.py  scrape.py  url.py
immoweb_scraper/setup/: browser.py  download_chromedriver.py
scripts/: download_chromedriver.py
tests/: test_batcher.py  test_browser_setup.py  test_chromedriver_download.py
