[tool.poetry]
name = "immoweb-scraper"
version = "0.1.0"
description = "A scraper of immoweb url links"
authors = ["Rohail Taimour <rohail.taimour@gmail.com>"]
readme = "README.md"
packages = [{include = "immoweb_scraper"}]

[tool.poetry.scripts]
scrape-immoweb = 'immoweb_scraper.main:app'
download-chromedriver = 'immoweb_scraper.setup.download_chromedriver:app'

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
selenium = "^4.12.0"
typer = "^0.9.0"
requests = "^2.31.0"
loguru = "^0.7.2"
pydantic = ">=1.10.0,<2.0.0"
prefect = "^2.13.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.4.0"
flake8 = "^6.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88